# qalmsw

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: refs.bib  sample.tex
src/qalmsw/: _concurrency.py  cli.py  document.py
src/qalmsw/bib/: __init__.py  inline.py  parser.py
src/qalmsw/checkers/: __init__.py  artifacts.py  base.py  citations.py  claims.py  figures.py  grammar.py  images.py  references.py  reviewer.py
src/qalmsw/llm/: __init__.py  client.py
src/qalmsw/parse/: __init__.py  citations.py  includes.py  sections.py  tex.py
src/qalmsw/report/: __init__.py  json.py  text.py
src/qalmsw/retrieval/: __init__.py  scholar.py  semantic_scholar.py
tests/: test_artifacts.py  test_bib_parser.py  test_citation_scan.py  test_citations_checker.py  test_claims.py  test_cli.py  test_concurrency.py  test_figures.py  test_grammar.py  test_images.py  test_includes.py  test_inline_bib.py  test_llm_client.py  test_parse.py  test_references.py  test_reviewer.py  test_scholar.py  test_sections.py  test_semantic_scholar.py
