[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qalmsw"
version = "0.0.1"
description = "Automated QA for scientific LaTeX writing using local LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pylatexenc>=2.10",
    "openai>=1.40",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "scholarly>=1.7",
    "bibtexparser>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
]

[project.scripts]
qalmsw = "qalmsw.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/qalmsw"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
